--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tiny-localstorage",
-  "version": "1.0.6",
+  "version": "1.1.1",
   "description": "Just a simple HTML5/JS Local Storage things to store and get stuff!",
-  "main": "ls.js",
+  "main": "tls.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
